# basic-kinect-fusion

./: .gitignore  CMakeLists.txt  Configuration.cpp  FreeImageHelper.cpp  FreeImageHelper.h  LICENSE  PointCloud.h  PointCloudPyramid.h  README.md  TSDFVoxelGrid.cpp  TSDFVoxelGrid.h  Todo.md  VirtualSensor.h  VoxelGrid.cpp  VoxelGrid.h  main.cpp
src/: main.cpp
src/configuration/: Configuration.cpp  Configuration.h
src/cuda/: CMakeLists.txt  CudaVoxelGrid.cu  CudaVoxelGrid.h  ICPOptimizer.cu  ICPOptimizer.h  PointCloud.cu  PointCloud.h  PointCloudPyramid.cu  PointCloudPyramid.h  Test.cu
src/kinect_fusion/: Eigen.h  ICPOptimizer copy.h  ICPOptimizer.h  PointCloud.cu  PointCloud.h  PointCloudPyramid.cu  PointCloudPyramid.h  VoxelGrid.cpp  VoxelGrid.h
src/sensor/: KinectSensor.cpp  KinectSensor.h  VirtualSensor.h
src/visualization/: FreeImageHelper.cpp  FreeImageHelper.h  MarchingCubes.h  PointCloudToMesh.cpp  PointCloudToMesh.h  SimpleMesh.h
